# anthropic-claude-agent-sdk

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: ci.yml  deploy-pages.yml  deploy-worker.yml
agents/animation-worker/: CLAUDE.md  README.md  pyproject.toml
agents/animation-worker/src/animation_worker/: __init__.py  agent.py  cli.py  models.py  status_manager.py
agents/manager-agent/: CLAUDE.md  pyproject.toml
agents/manager-agent/src/manager_agent/: __init__.py  cli.py  escalation_handler.py  github_monitor.py  manager.py  models.py  worker_pool.py
agents/manager-agent/tests/: __init__.py  test_models.py
agents/shared/: README.md  pyproject.toml
agents/shared/src/worker_shared/: __init__.py  base_models.py  base_status.py  git_ops.py  github_ops.py
agents/worker-agent/: .coverage  .gitignore  CLAUDE.md  pyproject.toml
agents/worker-agent/src/worker_agent/: __init__.py  agent.py  cli.py  dry_run_managers.py  git_manager.py  github_manager.py  models.py  status_manager.py
agents/worker-agent/tests/: __init__.py  test_dry_run.py  test_models.py
apps/choose-your-own-adventure/: index.html  package-lock.json  package.json  vitest.config.ts
apps/choose-your-own-adventure/src/: main.test.ts  main.ts
apps/choose-your-own-adventure/src/api/: client.test.ts  client.ts
apps/choose-your-own-adventure/src/engine/: StoryEngine.test.ts  StoryEngine.ts  types.ts
apps/choose-your-own-adventure/src/stories/: dragonsCave.ts  index.ts
apps/choose-your-own-adventure/src/styles/: main.css
apps/choose-your-own-adventure/src/utils/: SaveManager.test.ts  SaveManager.ts  routing.test.ts  routing.ts
apps/choose-your-own-adventure/stories/dragon-adventure/: meta.json
apps/choose-your-own-adventure/stories/dragon-adventure/nodes/: node-1768845953049-qsdzf8.json  node-1768858820550-bsqbqo.json  node-1768859014672-7kv5dl.json  node-1768859060827-w0n1wf.json  node-1768870637976-6b9ggz.json  node-1768870746946-c7dey0.json  node-1768870835687-hsh3z2.json  node-1768870936495-p3nlse.json  node-1768871026288-oi0rso.json  start.json
apps/choose-your-own-adventure/stories/haunted-mansion/: meta.json
apps/choose-your-own-adventure/stories/haunted-mansion/nodes/: node-1768871181361-klxade.json  node-1768871255985-4858qo.json  node-1768871459567-bcva3j.json  node-1768871568611-0qz14n.json  start.json
apps/choose-your-own-adventure/stories/space-odyssey/: meta.json
apps/choose-your-own-adventure/stories/space-odyssey/nodes/: start.json
apps/choose-your-own-adventure/worker/: package-lock.json  package.json  tsconfig.json  wrangler.toml
apps/choose-your-own-adventure/worker/src/: ai.ts  github.ts  index.ts  safety.ts  types.ts
apps/roblox-animation/: README.md  pyproject.toml
apps/roblox-animation/blender/templates/: .gitkeep
apps/roblox-animation/scripts/: anim2rbx-wrapper.sh  convert_all.sh  full_pipeline.sh  render_and_analyze.sh
apps/roblox-animation/src/animation_tools/: __init__.py  analyze_animation.py  create_animation.py  orchestrator.py  render_frames.py
apps/roblox-animation/src/blender_scripts/: __init__.py  export_animation.py  render_frames.py
apps/roblox-animation/src/gemini_analyzer/: __init__.py  frame_sequence.py  single_image.py
apps/roblox-animation/tests/: __init__.py  test_gemini_analyzer.py
docs/: essay.html  index.html  multi-model-animation.html  styles.css  worker-agent.html
docs-for-claude/: INDEX.md  claude-agent-sdk-knowledge.md
examples/: list-files.py
raw-docs-source/: Claude-Agent-SDK-Workshop.md  claude-agent-sdk.md
scripts/: calculate_reading_time.py
