[project]
name = "manager-agent"
version = "0.1.0"
description = "Manager agent that orchestrates worker agents for autonomous PR lifecycle"
requires-python = ">=3.11"
dependencies = [
    "pygithub",
    "pydantic>=2.0",
    "rich",
    "typer",
    "python-dotenv",
]

[project.scripts]
manager = "manager_agent.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio",
    "pytest-cov",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM", "TCH", "ASYNC"]
ignore = ["E501", "B008", "B904", "ASYNC220", "ASYNC221", "E741", "SIM110", "C401"]  # B008: typer, ASYNC: subprocess intentional

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = "-v"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/manager_agent"]
